hide user name and bought pronoun in unapproved purchases.

--- a/app/views/purchases/index.html.erb
+++ b/app/views/purchases/index.html.erb
@@ -46,7 +46,7 @@
 
 <div class="feed-grid-container border-box rounded-8-bottom">
 
-	<div id="feed" class="feed grid no-user-photo actions link-disabled rounded-8-bottom">
+	<div id="feed" class="feed grid no-user-photo no-user-name no-user-bought-pronoun actions link-disabled rounded-8-bottom">
   </div>
 
 	<div id="feed-spinner" class="feed-loading white">
