--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -1404,7 +1404,7 @@ a.feed-intro .highlight { font-weight: bold; }
 	
 .inset-container .inset-message {
 	text-align: left; 
-	width: 388px; 
+	width: 504px; 
 	font-weight: bold; 
 	line-height: 40px; 
 	font-size: 20px; 
@@ -1416,15 +1416,23 @@ a.feed-intro .highlight { font-weight: bold; }
 .inset-message span img { padding: 0 8px 0 14px; margin-top: -2px; }
 .inset-message span .icon-white { margin: 6px 9px 0 15px; }
 
-.inset-message.working  .message-working  {display: block;}
-.inset-message.working  .message-complete {display: none;}
-.inset-message.working  .message-update   {display: none;}
-.inset-message.complete .message-working  {display: none;}
-.inset-message.complete .message-complete {display: block;}
-.inset-message.complete .message-update   {display: none;}
-.inset-message.update  .message-working  {display: none;}
+.inset-message.working  .message-working, 
+.inset-message.complete .message-complete, 
+.inset-message.update  .message-update {display: block;}
+
+.inset-message.working  .message-complete,
+.inset-message.working  .message-update,
+.inset-message.complete .message-working {display: none;}
+
+.inset-message.complete .message-update,
+.inset-message.update  .message-working,
 .inset-message.update  .message-complete {display: none;}
-.inset-message.update  .message-update   {display: block;}
+
+.progress-message.working .message-working,
+.progress-message.nothing .message-nothing { display: block; }
+
+.progress-message.nothing .message-working,
+.progress-message.working .message-nothing { display: none; }
 	
 	
 /* Settings
