--- a/app/views/purchases/index.html.erb
+++ b/app/views/purchases/index.html.erb
@@ -46,10 +46,12 @@
 
 <div class="feed-grid-container border-box rounded-8-bottom" style="padding-bottom: 32px;">
 
-	<div id="feed-balls" class="feed grid no-user-photo no-user-name no-user-bought-pronoun actions link-disabled rounded-8-bottom">
+	<div id="feed" class="feed grid no-user-photo no-user-name no-user-bought-pronoun actions link-disabled rounded-8-bottom">
   </div>
   
-  <div class="progress-message working" style="padding-top: 32px; line-height: 24px; color: #999; font-size: 16px; text-align: center;">
+  <div id="central_message"
+    class="progress-message working" 
+    style="padding-top: 32px; line-height: 24px; color: #999; font-size: 16px; text-align: center;">
 		<span class="message-working">
 				<%=image_tag "cat-wait.gif",
 	     			:class => "rounded-5",
