hooking up close button.

--- a/app/views/purchases/index.html.erb
+++ b/app/views/purchases/index.html.erb
@@ -61,7 +61,7 @@
     </span>
     <span class="message-nothing">
 	    Sorry, Mine couldn't find any of your e-receipts at this time. 
-	    <a class="light underlined" href="/">Close</a>
+	    <a class="light underlined" href="<%=root_path(:src => 'no_purchases')%>">Close</a>
     </span>
   </div>
 
