--- a/app/views/google/create.html.erb
+++ b/app/views/google/create.html.erb
@@ -1,7 +1,13 @@
-<%content_for :javascript do%>
+<%if @web_view_mode%>
   <script type="text/javascript">
-    $(document).ready(function() {
-      window.close();
-    });
+    window.location.href = "mine-internal://google/<%=self.current_user.google_authorized? ? 'approved' : 'rejected'%>";
   </script>
+<%else%>
+  <%content_for :javascript do%>
+    <script type="text/javascript">
+      $(document).ready(function() {
+          window.close();
+      });
+    </script>
+  <%end%>
 <%end%>
