sort email parseable stores by weight.

--- a/app/views/admin/stores/edit.html.erb
+++ b/app/views/admin/stores/edit.html.erb
@@ -67,6 +67,8 @@
       <%=j.check_box :is_active%>
       <br>
       Emails -  <%=j.text_field :emails%>
+      <br>
+      Weight -  <%=j.text_field :weight%>
     <%end%>
 
     <br><br>
