route to feed is no purchases are imported.

--- a/app/views/purchases/index.html.erb
+++ b/app/views/purchases/index.html.erb
@@ -72,7 +72,8 @@
     new Denwen.Views.Purchases.Unapproved({
       source  : "<%=h @source%>",
       mode : "<%=h params[:mode]%>",
-      successURL: "<%=user_path(self.current_user.handle,:src =>'mined')%>"
+      successURL: "<%=user_path(self.current_user.handle,:src =>'mined')%>",
+      successZeroURL: "<%=root_path(:src => 'not_mined')%>"
       });
   </script>
 <%end%>
