changing salution in emails.

--- a/app/views/user_mailer/new_user.text.html.erb
+++ b/app/views/user_mailer/new_user.text.html.erb
@@ -52,5 +52,5 @@
     <p style="max-width: 440px; margin-left: auto; margin-right: auto; text-align: left; font-size:14px; line-height: 140%; 
     	font-family: 'Helvetica'; -webkit-font-smoothing: antialiased;"> 
     	Thanks,<br>
-    	The team at Mine
+    	Team Mine
     </p>
