post-email-import share box

--- a/app/views/users/_box.html.erb
+++ b/app/views/users/_box.html.erb
@@ -5,7 +5,7 @@
         user_path(user.handle,:src => "box")%>
         
     <div class="basics border-box">
-    	<span class="rwd-hide"><%=logged_in? ? '' : 'Follow '%></span><%=h user.full_name%> 
+    	<%=h user.full_name%> 
     	<br>
     	<span class="item-count">
         <%unless user.purchases_count.zero?%>
