--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -96,6 +96,42 @@
 </div> <!-- /profile-box -->
 
 
+<!-- Post-email-import share -->
+
+<div class="well-box border-box txt m rounded-8">
+	<i class="icon-ok icon-white" style="padding-right: 4px;"></i>
+	Import successful. Tell friends about your update.
+	
+	<!-- Tweet Button 
+	<a href="<%#tw_auth_path(:src => @origin)%>" 
+	    onclick="this.className += ' load';"
+	    class="btn btn-small btn-twitter rounded-3 relative shaded"
+	    style="float: right; width: 80px; margin-top: -3px;">
+	  <span class='hide-when-loading'>
+	    <%#image_tag "social/t-box.png",
+	        :class => "t-box"%>
+	    <span class="rwd-hide"> Tweet</span>
+	  </span>
+	  <i class='icon-loading icon-white'></i>
+	</a> 	
+-->
+	
+	<!-- Facebook Share Button -->
+	<a href="<%=fb_auth_path(:src => @origin)%>" 
+	    onclick="this.className += ' load';"
+	    class="btn btn-small btn-facebook rounded-3 relative shaded"
+	    style="float: right; width: 80px; margin-top: -3px;">
+	  <span class='hide-when-loading'>
+	    <%=image_tag "social/f-box.png",
+	        :class => "f-box"%>
+	    <span class="rwd-hide"> Share</span>
+	  </span>
+	  <i class='icon-loading icon-white'></i>
+	</a> 	
+
+</div> <!-- Post-email-import share -->
+
+
 
 <div class="box-title profile-feed-title relative">
 	<%=is_current_user(@user) ? "Your" : "#{@user.first_name}'s"%> items
