post email share tweak

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -100,7 +100,7 @@
 
 <div class="well-box border-box txt m rounded-8">
 	<i class="icon-ok icon-white" style="padding-right: 4px;"></i>
-	Import successful. Tell friends about your update.
+	Import successful. Tell friends about the update!
 	
 	<!-- Tweet Button 
 	<a href="<%#tw_auth_path(:src => @origin)%>" 
