import button even more disabled-looking

--- a/app/views/purchases/index.html.erb
+++ b/app/views/purchases/index.html.erb
@@ -19,7 +19,7 @@
 			</span>
 			<span class="message-update">
 				<i class="icon-ok icon-white"></i> 
-				Review your recent purchases.
+				Review your recent purchases:
 			</span>
  	 	</div>
 
@@ -31,7 +31,7 @@
 					Import these items
 				</span>
 				<span class="disabled-on">
-					Almost ready!
+					Almost ready.
 				</span>
 		</a>
 	
