--- a/public/stylesheets/general.css
+++ b/public/stylesheets/general.css
@@ -431,7 +431,7 @@ input.error:focus, textarea.error:focus {
 	background-color: #555 !important;
 	text-shadow: 0 1px 1px rgba(255,255,255,0.8); }
 .btn.btn-silver.disabled {
-	color: #ccc;
+	color: #888;
 	background: #555 !important; 
 	background-image: none !important;
 	box-shadow: none !important;
