'we'll only be a moment'

--- a/app/views/purchases/index.html.erb
+++ b/app/views/purchases/index.html.erb
@@ -57,7 +57,7 @@
 	     			:class => "rounded-5",
 	     			:style => "padding-bottom: 20px;"%>
 	    <br>
-	    We'll have something for you in a few seconds.
+	    We'll only be a moment.
     </span>
     <span class="message-nothing">
 	    Sorry, Mine couldn't find any of your e-receipts at this time. 
