--- a/app/views/purchases/index.html.erb
+++ b/app/views/purchases/index.html.erb
@@ -31,7 +31,7 @@
 					Import these items
 				</span>
 				<span class="disabled-on">
-					Almost ready.
+					Almost ready...
 				</span>
 		</a>
 	
