--- a/app/views/feed/show.html.erb
+++ b/app/views/feed/show.html.erb
@@ -72,30 +72,32 @@
 </div> <!-- /create-box -->
 
 
-<%unless self.current_user.email_authorized?%>
+<%if self.current_user.email_authorized?%>
   <!-- email importer box -->
   <div class="well-box border-box rounded-8-bottom rwd-hide" 
     style="padding-top: 2px; margin: -17px 0 12px; box-shadow: none;">
     <div class="email-action-box relative">		
       <span class="txt m top-line opacity-80">
-        Import purchases automagically via your inbox.
+        <b>Import purchases automagically via your inbox</b>
       </span>
       <br>
-      <a class="txt s bottom-line opacity-80-100 transition-opacity" href="javascript:void(0)">
-        Learn more
-      </a>
+      <span class="txt s bottom-line opacity-80" href="javascript:void(0)">
+        Connect to preview your items.
+      </span>
       <a id="google_connect_button"
-          class="btn btn-small btn-silver shaded rounded-3 absolute" 
+          class="btn btn-small btn-silver shaded rounded-3-left absolute" 
           href="javascript:void(0)" 
-          style="width: 15%; top: 12px; right: 16.61%;">
-        <%=image_tag "logos/email-google-logo-18.png",
+          style="width: 16.61%; top: 12px; right: 16.61%;">
+        <%=image_tag "logos/email-gmail-logo-18.png",
             :class => "hide-when-loading"%>
         <i class="icon-loading icon-white"></i>
       </a>
       <a id="yahoo_connect_button"
-          class="btn btn-small btn-silver shaded rounded-3 absolute" 
+          class="btn btn-small btn-silver shaded rounded-3-right absolute" 
           href="javascript:void(0)" 
-          style="width: 15%; top: 12px; right: 0;">
+          style="width: 16.61%; top: 12px; right: 0;
+          border-left: 1px solid #ababab; 
+          border-left: 1px solid rgba(0,0,0,0.16);">
         <%=image_tag "logos/email-yahoo-logo-18.png",
             :class => "hide-when-loading"%>
         <i class="icon-loading icon-white"></i>
