--- a/app/views/welcome/connect.html.erb
+++ b/app/views/welcome/connect.html.erb
@@ -1,6 +1,6 @@
 <div class="well-box padded border-box rounded-8 relative">
 
-	<h2>New! Import your purchases, automagically</h2>
+	<h2>Import your recent purchases, automagically</h2>
 	
 	<p class="txt m border-box">
 		Connect your email, sit back and watch Mine revive your e-receipts.
@@ -12,7 +12,7 @@
 		   class="btn btn-large btn-silver shaded rounded-3" 
 		    href="javascript:void(0)" 
 		    style="width: 33.3333%;">
-		  <%=image_tag "logos/email-google-logo-30.png",
+		  <%=image_tag "logos/email-gmail-logo-30.png",
 		      :class => "hide-when-loading"%>
 		  <i class="icon-loading icon-white"></i>
 		</a>
@@ -20,7 +20,7 @@
 		    class="btn btn-large btn-silver shaded rounded-3" 
 		    href="javascript:void(0)" 
 		    style="margin-left: 1.61%; width: 33.3333%;">
-		  <%=image_tag "logos/email-yahoo-logo-30.png",
+		  <%=image_tag "logos/email-yahoomail-logo-30.png",
 		      :class => "hide-when-loading"%>
 		  <i class="icon-loading icon-white"></i>
 		</a>
@@ -28,16 +28,13 @@
 	</div>
 
 
-	<span class="txt s">
-		<a class="opacity-80-100 transition-opacity" href="javascript:void(0)">
-			Learn more
-		</a>
-		&nbsp;&nbsp;|&nbsp;&nbsp;
-		<a class="opacity-80-100 transition-opacity" 
+	<div class="txt s">
+		Pick the email you use for Amazon, iTunes, etc...
+		<a style="float: right;" class="opacity-80-100 transition-opacity" 
         href="<%=root_path(:src => 'skip')%>">
 			Skip
 		</a>
-	</span>
+	</div>
 
 </div> <!-- /well-box -->
 
