--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -101,30 +101,28 @@
   <div class="well-box border-box txt m rounded-8">
 
     <i class="icon-ok icon-white" style="padding-right: 4px;"></i>
-    Import successful. Tell friends about the update!
+    Import successful. Share the update?
     
     <!-- Tweet Button--> 
-    <a href='https://twitter.com/share'
-        class='twitter-share-button'
-        data-lang='en'
-        data-count='none'
-        data-related='getmine'
-        data-dnt='true'
-        data-text='Just started my Mine'
-        data-url=<%=user_url(@user.handle)%>>
-    </a> 	
+    <span style="float:right;">
+	    <a href='https://twitter.com/share'
+	        class='twitter-share-button'
+	        data-lang='en'
+	        data-count='none'
+	        data-related='getmine'
+	        data-dnt='true'
+	        data-text='I just added some new items to my @getmine profile:'
+	        data-url=<%=user_url(@user.handle)%>>
+	    </a> 	
+    </span>
+    
     
     <!-- Facebook Share Button -->
     <a href='javascript:void(0)'
         id='fb_share_button'
-        class='btn btn-small btn-facebook rounded-3 relative shaded'
-        style='float: right; width: 80px; margin-top: -3px;'>
-      <span class='hide-when-loading'>
-        <%=image_tag "social/f-box.png",
-            :class => "f-box"%>
-        <span class="rwd-hide"> Share</span>
-      </span>
-      <i class='icon-loading icon-white'></i>
+        style='float: right; vertical-align: top; margin-right: 6px;'>
+        <%=image_tag "f-share-20.png",
+     			:style => "vertical-align: top;"%>
     </a> 	
 
   </div> <!-- Post-email-import share -->
