email importer loading state btn

--- a/app/views/purchases/index.html.erb
+++ b/app/views/purchases/index.html.erb
@@ -27,12 +27,13 @@
 	      id="submit_button"
 				class="btn btn-silver btn-large border-box rounded-3 shaded disabled"
 				style="width: 176px; vertical-align: top;">
-				<span class="disabled-off">
+				<span class="disabled-off hide-when-loading">
 					Import these items
 				</span>
-				<span class="disabled-on">
+				<span class="disabled-on hide-when-loading">
 					Almost ready...
 				</span>
+				<i class="icon-loading icon-white"></i>
 		</a>
 	
   </div>
