--- a/app/views/welcome/connect.html.erb
+++ b/app/views/welcome/connect.html.erb
@@ -3,7 +3,7 @@
 	<h2>Import your recent purchases, automagically</h2>
 	
 	<p class="txt m border-box">
-		Connect your email, sit back and watch Mine revive your e-receipts.
+		Connect your email, sit back and preview your revived e-receipts.
 	</p>
 	
 	<div style="padding: 12px 0 22px;">
