rwd email importer picker, silver invite btns

--- a/app/views/purchases/_chooser.html.erb
+++ b/app/views/purchases/_chooser.html.erb
@@ -60,7 +60,7 @@
 		<div class="results border-box" id="results">
     </div>
 	
-		<div class="scroll-instructions txt s gradient v-FFF-DDD" 
+		<div class="scroll-instructions txt s gradient v-FFF-DDD rwd-hide" 
       id="scroll_for_more_results">
 	      <span class="hide-when-loading">
 	      	Scroll down for more 
