--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -101,7 +101,7 @@
   <div class="well-box border-box txt m rounded-8">
 
     <i class="icon-ok icon-white" style="padding-right: 4px;"></i>
-    Import successful. Share the update?
+    Import successful.<span class="rwd-hide"> Share the update?</span>
     
     <!-- Tweet Button--> 
     <span style="float:right;">
