--- a/app/views/welcome/show.html.erb
+++ b/app/views/welcome/show.html.erb
@@ -10,7 +10,7 @@
 	<a href="<%=welcome_path(WelcomeFilter::Connect)%>"
 			class="btn btn-large btn-red border-box rounded-3 absolute shaded"
 			style="width: 140px; top: 12px; right: 12px;">
-		Start Yours
+		Start
 	</a>
 </div>
 
