--- a/app/views/purchases/index.html.erb
+++ b/app/views/purchases/index.html.erb
@@ -5,13 +5,13 @@
         :class => "logo absolute"),
       root_path(:src => "unapproved_purchases")%>
       
-	<div class="inset-container relative well-box border-box rounded-8">
+	<div class="inset-container relative well-box border-box rounded-8" style="text-align: left; width: 692px;">
 				
 		<div id="progress_message" class="inset-message inline-block working">
 			<span class="message-working">
     	<%=image_tag "loading/loading-sync-FFF-474747.gif",
      			:class => "sync"%>
-     	Loading your recent purchases...
+     	<span class="rwd-hide">Loading your recent purchases...</span>
 			</span>
 			<span class="message-complete">
 				<i class="icon-ok icon-white"></i> 
@@ -19,26 +19,23 @@
 			</span>
 			<span class="message-update">
 				<i class="icon-ok icon-white"></i> 
-				Review your recent purchases:
+				<span class="rwd-hide">Review your recent purchases:</span>
 			</span>
  	 	</div>
 
 	  <a href="javascript:void(0)"
 	      id="submit_button"
 				class="btn btn-silver btn-large border-box rounded-3 shaded disabled"
-				style="width: 176px; vertical-align: top;">
-				<span class="disabled-off hide-when-loading">
+				style="width: 176px; vertical-align: top; float: right;">
+				<span class="hide-when-loading">
 					Import these items
-				</span>
-				<span class="disabled-on hide-when-loading">
-					Almost ready...
 				</span>
 				<i class="icon-loading icon-white"></i>
 		</a>
 	
   </div>
       
-  <a class="close opacity-60-80 absolute alias-smooth transition-opacity" 
+  <a class="close opacity-60-80 absolute alias-smooth transition-opacity rwd-hide" 
     href="<%=is_onboarding? ? welcome_path(WelcomeFilter::Connect) : root_path%>">
 		×
 	</a>
@@ -61,7 +58,7 @@
 	    We'll only be a moment...
     </span>
     <span class="message-nothing">
-	    Sorry, Mine couldn't find any of your e-receipts at this time. 
+	    Sorry, Mine couldn't find any<br class="rwd-show"> of your e-receipts at this time.<br class="rwd-show"> 
 	    <a class="light underlined" href="<%=root_path(:src => 'no_purchases')%>">Close</a>
     </span>
   </div>
