--- a/app/views/feed/show.html.erb
+++ b/app/views/feed/show.html.erb
@@ -77,10 +77,9 @@
   <div class="well-box border-box rounded-8-bottom rwd-hide" 
     style="padding-top: 2px; margin: -17px 0 12px; box-shadow: none;">
     <div class="email-action-box relative">		
-      <span class="txt m top-line opacity-80">
-        <b>Import purchases automagically via your inbox</b>
-      </span>
-      <br>
+      <div class="txt m top-line opacity-80">
+        Import purchases automagically via your inbox
+      </div>
       <span class="txt s bottom-line opacity-80" href="javascript:void(0)">
         Connect to preview your items.
       </span>
