--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -367,7 +367,7 @@ ul.txt.s li .user-photo { margin-right: 4px; }
 ==================================================================== */
 
 .user-action-box {
-	padding: 0 17% 5px 42px;
+	padding: 0 17% 3px 42px;
 	min-height: 36px;
 	margin-bottom: 10px;
 	border-bottom: 1px solid #494949; }
@@ -385,12 +385,12 @@ ul.txt.s li .user-photo { margin-right: 4px; }
 	top: 0;
 	left: 0; }
 
-.user-action-box .top-line { font-weight: bold; }
-
 .user-action-box .top-line,
 .email-action-box .top-line {
+	font-weight: bold;
 	color: white;
-	line-height: 120%; }
+	line-height: 120%;
+	margin-bottom: 2px; }
 
 .user-action-box .bottom-line,
 .email-action-box .bottom-line {
