--- a/app/views/home/_story.html.erb
+++ b/app/views/home/_story.html.erb
@@ -8,7 +8,8 @@
           :class => "logo-home unselectable"%>	
       
       <%unless is_phone_device?%>  
-	      <a href="http://itunes.apple.com/us/app/mine./id567558757?mt=8" class="app-store-badge absolute">
+	      <a href="http://itunes.apple.com/us/app/mine./id567558757?mt=8" 
+	      class="app-store-badge absolute opacity-80-100 transition-opacity">
 	      	<%=image_tag "home/app-store-badge-2x.png",
 	          :class => ""%>
 	      </a>
@@ -106,21 +107,19 @@
 				<i class="icon-chevron-right absolute transition-opacity"></i>
 			</a>
 			
-<!--
 			<a 
-				<#unless is_phone_device?%>
+				<%unless is_phone_device?%>
 					href="#modal4" data-toggle="modal" onclick="mixpanel.track('Home Modal Clicked',{'Type':'Profile'})"
-				<#else%>
-          href="<#=home_sample_url("profile3",:web_view_mode => @web_view_mode)%>"
-				<#end%>
+				<%else%>
+          href="<%=home_sample_url("profile3",:web_view_mode => @web_view_mode)%>"
+				<%end%>
           class="cell rounded-8 border-box transition-bg 
                   transition-color transition-border-color relative">
-				<#=image_tag "home/ag.jpg",
+				<%=image_tag "home/ag.jpg",
 					:class => "user-photo absolute rounded-3"%>
 				Alex is an amateur cyclist from Chicago with a passion for Cyclo-Cross. 
 				<i class="icon-chevron-right absolute transition-opacity"></i>
 			</a>
--->
 				
 			</div>
 			
@@ -147,21 +146,19 @@
 					<i class="icon-chevron-right absolute transition-opacity"></i>
 				</a>
 				
-<!--
 				<a 
-					<#unless is_phone_device?%>
+					<%unless is_phone_device?%>
 						href="#modal5" data-toggle="modal" onclick="mixpanel.track('Home Modal Clicked',{'Type':'Profile'})"
-					<#else%>
-	          href="<#=home_sample_url("profile4",:web_view_mode => @web_view_mode)%>"
-					<#end%>
+					<%else%>
+	          href="<%=home_sample_url("profile4",:web_view_mode => @web_view_mode)%>"
+					<%end%>
 	          class="cell rounded-8 border-box transition-bg 
 	                  transition-color transition-border-color relative">
-					<#=image_tag "home/sam.jpg",
+					<%=image_tag "home/sam.jpg",
 						:class => "user-photo absolute rounded-3"%>
 					One item here convinced Sam he wanted to make movies for life. 
 					<i class="icon-chevron-right absolute transition-opacity"></i>
 				</a>
--->
 				
 			</div>
 			
@@ -185,6 +182,20 @@
 					<%=image_tag "home/richard.jpg",
 						:class => "user-photo absolute rounded-3"%>
 					Richard is the designer behind the Mine logo. Here's his setup.
+					<i class="icon-chevron-right absolute transition-opacity"></i>
+				</a>
+				
+				<a 
+					<%unless is_phone_device?%>
+						href="#modal6" data-toggle="modal" onclick="mixpanel.track('Home Modal Clicked',{'Type':'Profile'})"
+					<%else%>
+	          href="<%=home_sample_url("profile5",:web_view_mode => @web_view_mode)%>"
+					<%end%>
+	          class="cell rounded-8 border-box transition-bg 
+	                  transition-color transition-border-color relative">
+					<%=image_tag "home/ag2.jpg",
+						:class => "user-photo absolute rounded-3"%>
+					Alex is a designer at Google. It's fair to say he's into comics. 
 					<i class="icon-chevron-right absolute transition-opacity"></i>
 				</a>
 				
@@ -258,6 +269,19 @@
           </div>
         </div>
         
+        <! -- modal 6 -->
+        <div class="modal eyeglass hide rounded-5" id="modal6">
+          <button type="button" class="close absolute transition-opacity" 
+              data-dismiss="modal">
+            ×
+          </button>
+          <div class="modal-body">
+            <iframe seamless id="iframe_6" class="rounded-3" 
+              frameborder="0" width="100%" 
+              height="100%" src="<%=home_sample_url("profile5")%>"></iframe>
+          </div>
+        </div>
+        
       <%end%>
 			
 		</div> <!--/more -->
@@ -279,7 +303,8 @@
       $('#iframe_1').height($('#modal1').height());
       $('#iframe_2').height($('#modal2').height());
       $('#iframe_3').height($('#modal3').height());
-      $('#iframe_4').height($('#modal3').height());
+      $('#iframe_4').height($('#modal4').height());
+      $('#iframe_5').height($('#modal5').height());
     }
 
     resizeIFrames();
