--- a/app/views/home/_story.html.erb
+++ b/app/views/home/_story.html.erb
@@ -49,7 +49,7 @@
       </div>
       
       <h2>
-        You buy great things. <br class="rwd-show">Help others discover them, too.
+        Welcome to the social network <br class="rwd-show">devoted to the things we buy.
       </h2>
       
       <div style="text-align: center;">
