--- a/app/views/home/_story.html.erb
+++ b/app/views/home/_story.html.erb
@@ -49,7 +49,7 @@
       </div>
       
       <h2>
-        Welcome to the social network <br class="rwd-show">devoted to the things we buy.
+        Mine is a social network <br class="rwd-show">devoted to things we buy.
       </h2>
       
       <div style="text-align: center;">
@@ -125,7 +125,7 @@
 			
 			<div class="col-3">
 				<h3>
-					Share the best stuff in your life.
+					Share the best items in your life.
 				</h3>
 				<p>
 					Thousands of people use Mine to post the items that speak to who they are, 
@@ -164,11 +164,11 @@
 			
 			<div class="col-3">
 				<h3>
-					Learn from friends and followers.
+					Discover thru friends & followers.
 				</h3>
 				<p>
 					As the only place on the web where you can look up and follow anyone's best purchases, 
-					Mine is a never-ending thread of discoveries.
+					Mine is a never-ending thread of discovery.
 				</p>
 						
 				<a
