remove unapproved purchases from admin ui.

--- a/app/views/admin/users/show.html.erb
+++ b/app/views/admin/users/show.html.erb
@@ -28,7 +28,8 @@
             :confirm  => "There is no undo on this, sure?"%> <br>
   <br>
 
-  <b><%=@user.purchases_count%> Purchases </b> <br>
+  <b><%=@user.purchases_count%> Approved purchases </b> <br>
+  <b><%=@user.purchases.size%> Total purchases </b> <br>
   <b><%=@user.inverse_followings_count%> Friends </b> <br>
 
   <br>
