--- a/app/views/home/_story.html.erb
+++ b/app/views/home/_story.html.erb
@@ -49,7 +49,7 @@
       </div>
       
       <h2>
-        Mine is a social directory <br class="rwd-show">devoted to things we buy.
+        Mine is a directory <br class="rwd-show">of people and the items they buy.
       </h2>
       
       <div style="text-align: center;">
