--- a/app/views/home/samples/profile.html.erb
+++ b/app/views/home/samples/profile.html.erb
@@ -5,7 +5,7 @@
   </head>
 
   <body>
-  	<div id="container" class="container border-box relative" style="padding-bottom: 26px">   
+  	<div id="container" class="container border-box relative" style="padding-bottom: 26px;">   
 		    
     <%=render "headers/sample" unless @web_view_mode%>
 
